OHRM5X-1029: Fix time - project screens issues (#1076)
* OHRM5X-1029: Time - Project admin redundant required validation removed

* OHRM5X-1028: Time - Customer modal required text overlap issue fix

* OHRM5X-977: Time - My timesheet project autocomplete undefined customer fix

--- a/symfony/client/src/core/styles/global.scss
+++ b/symfony/client/src/core/styles/global.scss
@@ -109,3 +109,15 @@
     color: $oxd-interface-gray-darken-2-color;
   }
 }
+
+.orangehrm-form-action {
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    ::v-deep(.oxd-button--medium) {
+      width: 100%;
+    }
+  }
+}
